syntax = "proto3";
import "google/protobuf/timestamp.proto";


message HelloRequest {
  string name = 1;
}
message HelloReply {
  string message = 1;
}

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply);
}

////

message GrpcLocation {
  double latitude = 1;
  double longitude = 2;
  double height = 3;
}

message WifiInfo {
  string id = 1;
  float strength_signal = 2;
}

message TelemetryData {
  uint32 version = 1;
  google.protobuf.Timestamp time_stamp = 2;
  string device_id = 3;
  GrpcLocation location = 4;
  WifiInfo connected_wifi = 5;
  repeated WifiInfo list_wifi = 6;
}

service Telemetry {
  rpc SendTelemetry (TelemetryData) returns (TelemetryReplay);
}

message TelemetryReplay {
  string message = 1;
}
